tests/jsx_intrinsics.custom/jsx_intrinsics.custom.exp
Error ----------------------------------------------------------------------------------------------------- main.js:4:10

Cannot create `div` element because number [1] is incompatible with string [2] in property `id`. [incompatible-type]

   main.js:4:10
   4| <div id={42} />; // Error: (`id` prop) number ~> string
               ^^ [1]

References:
   lib/jsx.js:4:27
   4|   div: $JSXIntrinsic<{id: string, [StringPrefix<'data-'>]: string}>,
                                ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- main.js:7:12

Cannot create `div` element because string `id` [1] is incompatible with string prefixed with `data-` [2] in the indexer
property's key. [incompatible-type]

   main.js:7:12
   7| const d = <div {...dataProps} />; // OK with data props, but missing id
                 ^^^ [1]

References:
   main.js:6:20
   6| const dataProps: {[StringPrefix<'data-'>]: string} = {};
                         ^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- strings.js:9:2

Cannot create `Div` element because property `id` is missing in props [1] but exists in props of string literal
`div` [2]. [incompatible-type]

   strings.js:9:2
   9| <Div />; // This is fine
       ^^^

References:
   strings.js:9:1
   9| <Div />; // This is fine
      ^^^^^^^ [1]
   strings.js:5:11
   5| var Div = 'div' as const;
                ^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- strings.js:10:2

Cannot create `bad` element because property `bad` is missing in `$JSXIntrinsics` [1]. [prop-missing]

   strings.js:10:2
   10| <Bad />; // Error: 'bad' not in JSXIntrinsics
        ^^^

References:
   lib/jsx.js:3:23
                             v
    3| type $JSXIntrinsics = {
    4|   div: $JSXIntrinsic<{id: string, [StringPrefix<'data-'>]: string}>,
    5|   span: $JSXIntrinsic<{id: string, class: string, ...}>,
    6|   ...
    7| };
       ^ [1]


Error -------------------------------------------------------------------------------------------------- strings.js:11:2

Cannot create string element because an index signature declaring the expected key / value type is missing in
`$JSXIntrinsics` [1]. [prop-missing]

   strings.js:11:2
   11| <Str />; // Error: string ~> keys of JSXIntrinsics
        ^^^

References:
   lib/jsx.js:3:23
                             v
    3| type $JSXIntrinsics = {
    4|   div: $JSXIntrinsic<{id: string, [StringPrefix<'data-'>]: string}>,
    5|   span: $JSXIntrinsic<{id: string, class: string, ...}>,
    6|   ...
    7| };
       ^ [1]


Error -------------------------------------------------------------------------------------------------- strings.js:11:2

Cannot access `$JSXIntrinsics` [1] with computed property using string [2]. [invalid-computed-prop]

   strings.js:11:2
   11| <Str />; // Error: string ~> keys of JSXIntrinsics
        ^^^

References:
   lib/jsx.js:3:23
                             v
    3| type $JSXIntrinsics = {
    4|   div: $JSXIntrinsic<{id: string, [StringPrefix<'data-'>]: string}>,
    5|   span: $JSXIntrinsic<{id: string, class: string, ...}>,
    6|   ...
    7| };
       ^ [1]
   strings.js:7:10
    7| var Str: string = 'str';
                ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- strings.js:13:2

Cannot create `div` element because property `id` is missing in props [1] but exists in props of `div` [2].
[incompatible-type]

   strings.js:13:2
   13| <div />; // This is not fine
        ^^^ [2]

References:
   strings.js:13:1
   13| <div />; // This is not fine
       ^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- strings.js:14:2

Cannot create `bad` element because property `bad` is missing in `$JSXIntrinsics` [1]. [prop-missing]

   strings.js:14:2
   14| <bad />; // Error: 'bad' not in JSXIntrinsics
        ^^^

References:
   lib/jsx.js:3:23
                             v
    3| type $JSXIntrinsics = {
    4|   div: $JSXIntrinsic<{id: string, [StringPrefix<'data-'>]: string}>,
    5|   span: $JSXIntrinsic<{id: string, class: string, ...}>,
    6|   ...
    7| };
       ^ [1]


Error -------------------------------------------------------------------------------------------------- strings.js:15:2

Cannot create string element because an index signature declaring the expected key / value type is missing in
`$JSXIntrinsics` [1]. [prop-missing]

   strings.js:15:2
   15| <Str />; // Error: string ~> keys of JSXIntrinsics
        ^^^

References:
   lib/jsx.js:3:23
                             v
    3| type $JSXIntrinsics = {
    4|   div: $JSXIntrinsic<{id: string, [StringPrefix<'data-'>]: string}>,
    5|   span: $JSXIntrinsic<{id: string, class: string, ...}>,
    6|   ...
    7| };
       ^ [1]


Error -------------------------------------------------------------------------------------------------- strings.js:15:2

Cannot access `$JSXIntrinsics` [1] with computed property using string [2]. [invalid-computed-prop]

   strings.js:15:2
   15| <Str />; // Error: string ~> keys of JSXIntrinsics
        ^^^

References:
   lib/jsx.js:3:23
                             v
    3| type $JSXIntrinsics = {
    4|   div: $JSXIntrinsic<{id: string, [StringPrefix<'data-'>]: string}>,
    5|   span: $JSXIntrinsic<{id: string, class: string, ...}>,
    6|   ...
    7| };
       ^ [1]
   strings.js:7:10
    7| var Str: string = 'str';
                ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- strings.js:18:10

Cannot create `Div` element because number [1] is incompatible with string [2] in property `id`. [incompatible-type]

   strings.js:18:10
   18| <Div id={42} />; // Not an error but should be eventually
                ^^ [1]

References:
   lib/jsx.js:4:27
    4|   div: $JSXIntrinsic<{id: string, [StringPrefix<'data-'>]: string}>,
                                 ^^^^^^ [2]



Found 11 errors
